--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -57,7 +57,7 @@
 }
 
 .btn-tab {
-  @apply rounded-lg py-2 px-4 flex items-center gap-2.5 text-sm hover:bg-slate-200 dark:hover:bg-slate-700/70;
+  @apply rounded-lg py-2 px-4 flex items-center gap-2.5 text-sm hover:bg-slate-200 dark:hover:bg-slate-800/70 snap-center;
 }
 
 .btn-tab-active {
@@ -65,5 +65,5 @@
 }
 
 .tab-container {
-  @apply flex items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto whitespace-nowrap max-w-max mx-auto sticky top-4 backdrop-blur-sm z-40;
+  @apply flex items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto whitespace-nowrap max-w-max mx-auto sticky top-4 backdrop-blur-sm z-40 snap-x;
 }
