--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -16,7 +16,7 @@
       Coach: <%= link_to @team.owner.default_name, team_member_path(@team, @team.owner), class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
     </h2>
 
-    <%= simple_format @team.description, class: 'text-soft text-sm text-balance max-w-[80%] mx-auto' unless @team.description.blank? %>
+    <%= simple_format @team.description, class: 'text-soft text-sm md:max-w-[80%] md:mx-auto md:text-balance' unless @team.description.blank? %>
 
     <div class="flex flex-wrap items-center justify-center md:justify-end gap-4 mt-4">
       <%= render 'teams/shared/team_buttons', team: @team %>
