--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -6,7 +6,7 @@
           <% unless current_page?(run_path(run)) || current_page?(user_path(run.user)) %>
             <% path = local_assigns[:team] ? team_member_path(team, run.user) : user_path(run.user) %>
 
-            <%= link_to path, data: { turbo: false }, class: 'group mr-auto flex items-center gap-2' do %>
+            <%= link_to path, data: { turbo: false }, class: 'group mr-auto flex items-center gap-2 flex-grow' do %>
               <% if run.user.avatar.attached? %>
                 <%= image_tag run.user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-10 rounded-lg object-cover drop-shadow-lg dark:drop-shadow-none' %>
               <% else %>
