--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -18,17 +18,19 @@
       <% end %>
 
       <% if @run.user == current_user %>
-        <%= link_to 'Edit run', edit_run_path(@run), class: 'btn btn-primary' %>
-        <%= button_to 'Delete run',
-                      @run,
-                      method: :delete,
-                      data: {
-                        turbo: false,
-                        controller: 'confirmation',
-                        action: 'confirmation#confirm',
-                        confirmation_message_value: 'Are you sure you want to delete this run?'
-                      },
-                      class: 'btn btn-destructive btn-outline' %>
+        <div class="flex items-center gap-4">
+          <%= link_to 'Edit run', edit_run_path(@run), class: 'btn btn-primary' %>
+          <%= button_to 'Delete run',
+                        @run,
+                        method: :delete,
+                        data: {
+                          turbo: false,
+                          controller: 'confirmation',
+                          action: 'confirmation#confirm',
+                          confirmation_message_value: 'Are you sure you want to delete this run?'
+                        },
+                        class: 'btn btn-destructive btn-outline' %>
+        </div>
       <% end %>
     </div>
   </div>
