--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -14,6 +14,10 @@
     @apply text-2xl font-bold text-slate-900 dark:text-slate-100 tracking-tight;
   }
 
+  .text-normal {
+    @apply text-slate-800 dark:text-slate-100;
+  }
+
   .text-soft {
     @apply text-slate-700 dark:text-slate-400;
   }
