make 'text-soft' lighter in light mode

--- a/app/assets/stylesheets/custom/forms.css
+++ b/app/assets/stylesheets/custom/forms.css
@@ -97,7 +97,7 @@
   }
 
   .help-text {
-    @apply text-slate-700 dark:text-slate-400 text-xs;
+    @apply text-soft text-xs;
   }
 
   /* Use for select controls. */
