--- a/app/views/shared/_tab_bar.html.erb
+++ b/app/views/shared/_tab_bar.html.erb
@@ -6,7 +6,7 @@
 
 <div class="fixed inset-x-0 bottom-0 z-50 block w-full pb-1 border-t bg-slate-50 dark:bg-slate-800 dark:border-slate-700 md:hidden">
   <nav class="grid w-full grid-cols-5 place-items-center gap-y-4">
-    <%= link_to edit_user_registration_path, aria: { current: current_is_edit_user ? 'page' : nil }, class: "tab-link #{current_is_edit_user ? 'tab-link-active' : 'tab-link-inactive'}" do %>
+    <%= link_to edit_user_registration_path, aria: { current: current_is_edit_user ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_edit_user}" do %>
       <% if current_is_edit_user %>
         <%= inline_svg_tag 'icons/settings-filled.svg', class: 'size-6' %>
       <% else %>
@@ -15,7 +15,7 @@
       <span>Settings</span>
     <% end %>
 
-    <%= link_to search_path, aria: { current: current_is_search ? 'page' : nil }, class: "tab-link #{current_is_search ? 'tab-link-active' : 'tab-link-inactive'}" do %>
+    <%= link_to search_path, aria: { current: current_is_search ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_search}" do %>
       <% if current_is_search %>
         <%= inline_svg_tag 'icons/search-filled.svg', class: 'size-6' %>
       <% else %>
@@ -30,7 +30,7 @@
       <span class="sr-only">New Run</span>
     <% end %>
 
-    <%= link_to teams_path, aria: { current: current_is_teams ? 'page' : nil }, class: "tab-link #{current_is_teams ? 'tab-link-active' : 'tab-link-inactive'}" do %>
+    <%= link_to teams_path, aria: { current: current_is_teams ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_teams}" do %>
       <% if current_is_teams %>
         <%= inline_svg_tag 'icons/team-filled.svg', class: 'size-6' %>
       <% else %>
@@ -39,7 +39,7 @@
       <span>Teams</span>
     <% end %>
 
-    <%= link_to profile_path, aria: { current: current_is_profile ? 'page' : nil }, class: "tab-link #{current_is_profile ? 'tab-link-active' : 'tab-link-inactive'}" do %>
+    <%= link_to profile_path, aria: { current: current_is_profile ? 'page' : nil }, class: "tab-link #{'tab-link-active' if current_is_profile}" do %>
       <% if current_user.avatar.attached? %>
         <%= image_tag current_user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-7 rounded-md drop-shadow-md dark:drop-shadow-none object-cover' %>
       <% elsif current_is_profile %>
