--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,8 +4,8 @@
 <% current_is_teams = current_page?(teams_path) %>
 <% current_is_profile = current_page?(profile_path) %>
 
-<div class="hidden h-full flex-[0.25] min-w-72 md:block">
-  <nav class="h-full flex flex-col py-8 px-6 backdrop-blur-sm bg-slate-50/85 dark:bg-slate-800/85 border-r dark:border-slate-700">
+<div class="hidden h-full flex-[0.3] min-w-72 max-w-[350px] md:block">
+  <nav class="h-[calc(100%-2.5rem)] flex flex-col overflow-y-auto p-4 backdrop-blur-sm bg-slate-50/85 dark:bg-slate-800/85 border dark:border-slate-700 m-5 mr-0 rounded-lg shadow-lg">
     <div class="mb-4 text-xl font-bold">
       <span class="text-indigo-500">Team</span><span>Runner</span>
     </div>
@@ -48,11 +48,12 @@
       <% end %>
     </div>
 
-    <!-- Pinned pages -->
-    <%= render 'pinned_pages/list' %>
-
-    <!-- Pin/Unpin page button -->
-    <%= render 'pinned_pages/pin_button', page_url: request.fullpath %>
+    <div class="mb-6">
+      <!-- Pinned pages -->
+      <%= render 'pinned_pages/list' %>
+      <!-- Pin/Unpin page button -->
+      <%= render 'pinned_pages/pin_button', page_url: request.fullpath %>
+    </div>
 
     <!-- New run button -->
     <%= link_to new_run_path, aria: { current: current_is_new_run ? 'page' : nil }, class: 'btn btn-lg btn-primary mt-auto gap-3' do %>
