--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -45,11 +45,14 @@
         <span class="help-text">(optional)</span>
       </p>
     <% end %>
-    <%= image_tag(resource.avatar.attached? ? resource.avatar.variant(resize_to_limit: [100, 100]).processed : '', data: { image_preview_target: 'output' }, class: "size-24 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover #{resource.avatar.blank? ? 'hidden' : ''}") %>
 
-    <%= f.file_field :avatar, accept: 'image/png, image/jpeg', class: 'form-file my-2', data: { image_preview_target: 'input', action: 'image-preview#readURL' } %>
-
-    <button type="button" class="btn btn-white" data-image-preview-target="clearBtn" data-action="image-preview#clearUpload">Clear upload</button>
+    <div class="flex items-center gap-x-4">
+      <%= image_tag(resource.avatar.attached? ? resource.avatar.variant(resize_to_limit: [100, 100]).processed : '', data: { image_preview_target: 'output' }, class: "size-24 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover #{resource.avatar.blank? ? 'hidden' : ''}") %>
+      <div class="space-y-2">
+        <%= f.file_field :avatar, accept: 'image/png, image/jpeg', class: 'form-file', data: { image_preview_target: 'input', action: 'image-preview#readURL' } %>
+        <button type="button" class="btn btn-white" data-image-preview-target="clearBtn" data-action="image-preview#clearUpload">Clear upload</button>
+      </div>
+    </div>
 
     <% if resource.avatar.attached? %>
       <div class="flex items-center gap-2 mt-2">
