--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -28,11 +28,14 @@
           <span class="help-text">(optional)</span>
         </p>
       <% end %>
-      <%= image_tag(@team.photo.attached? ? @team.photo.variant(resize_to_limit: [100, 100]).processed : '', data: { image_preview_target: 'output' }, class: "size-24 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover #{@team.photo.blank? ? 'hidden' : ''}") %>
 
-      <%= form.file_field :photo, accept: 'image/png, image/jpeg', class: 'form-file my-2', data: { image_preview_target: 'input', action: 'image-preview#readURL' } %>
-
-      <button type="button" class="btn btn-white" data-image-preview-target="clearBtn" data-action="image-preview#clearUpload">Clear upload</button>
+      <div class="flex items-center gap-x-4">
+        <%= image_tag(@team.photo.attached? ? @team.photo.variant(resize_to_limit: [100, 100]).processed : '', data: { image_preview_target: 'output' }, class: "size-24 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover #{@team.photo.blank? ? 'hidden' : ''}") %>
+        <div class="space-y-2">
+          <%= form.file_field :photo, accept: 'image/png, image/jpeg', class: 'form-file', data: { image_preview_target: 'input', action: 'image-preview#readURL' } %>
+          <button type="button" class="btn btn-white" data-image-preview-target="clearBtn" data-action="image-preview#clearUpload">Clear upload</button>
+        </div>
+      </div>
 
       <% if @team.photo.attached? %>
         <div class="flex items-center gap-2 mt-2">
