--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -9,23 +9,59 @@
   <h2 class="mb-2 text-lg font-bold text-slate-700 dark:text-slate-200">Danger Zone</h2>
 </div>
 
-<div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+<div
+  data-controller="modal"
+  data-modal-hide-modal-class="opacity-0 scale-75 pointer-events-none"
+  data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
+  data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
+  data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
+  class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 dark:shadow-none dark:border-slate-700"
+>
   <div class="flex flex-wrap gap-4 items-center justify-between">
     <div>
       <p class="font-bold">Delete this team</p>
       <p class="help-text">Once you delete this team, there is no going back.</p>
     </div>
+
+    <!-- Open Delete Team Modal Button -->
+    <button data-action="click->modal#open" data-modal-id="deleteTeamModal" class="btn btn-destructive whitespace-nowrap">
+      Delete team
+    </button>
+  </div>
+
+  <!-- Delete Team Modal Backdrop -->
+  <div
+    data-modal-target="backdrop"
+    data-modal-id="deleteTeamModal"
+    data-action="click->modal#backdropClose"
+    class="modal-backdrop opacity-0 pointer-events-none"
+  ></div>
+
+  <!-- Delete Team Modal -->
+  <div
+    id="deleteTeamModal"
+    role="dialog"
+    tabindex="-1"
+    class="modal opacity-0 pointer-events-none"
+  >
+    <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+      <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Team?</h2>
+      <p class="text-soft text-sm">Are you sure? This cannot be undone.</p>
+    </div>
+
+    <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+      <button data-action="click->modal#close" data-modal-id="deleteTeamModal" type="button" class="btn btn-white mt-2 sm:mt-0">Cancel</button>
       <%= button_to 'Delete team',
                     @team,
                     method: :delete,
-                    class: 'btn btn-destructive',
-                    form: {
-                      data: {
-                        turbo: false,
-                        controller: 'confirmation',
-                        action: 'confirmation#confirm',
-                        confirmation_message_value: 'Are you sure you want to delete this team?'
-                      }
-                    } %>
+                    form: { data: { turbo: false } },
+                    class: 'btn btn-destructive w-full whitespace-nowrap'
+      %>
+    </div>
+
+    <button data-action="click->modal#close" type="button" data-modal-id="deleteTeamModal" class="absolute right-4 top-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+      <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+      <span class="sr-only">Close</span>
+    </button>
   </div>
 </div>
