--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -18,18 +18,57 @@
       <% end %>
 
       <% if @run.user == current_user %>
-        <div class="flex items-center gap-4">
-          <%= link_to 'Edit run', edit_run_path(@run), class: 'btn btn-primary' %>
-          <%= button_to 'Delete run',
-                        @run,
-                        method: :delete,
-                        data: {
-                          turbo: false,
-                          controller: 'confirmation',
-                          action: 'confirmation#confirm',
-                          confirmation_message_value: 'Are you sure you want to delete this run?'
-                        },
-                        class: 'btn btn-destructive btn-outline' %>
+        <div
+          data-controller="modal"
+          data-modal-hide-modal-class="opacity-0 scale-75 pointer-events-none"
+          data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
+          data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
+          data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
+        >
+          <div class="flex items-center gap-4">
+            <%= link_to 'Edit run', edit_run_path(@run), class: 'btn btn-primary' %>
+
+            <!-- Open Delete Run Modal Button -->
+            <button data-action="click->modal#open" data-modal-id="deleteRunModal" class="btn btn-destructive whitespace-nowrap">
+              Delete run
+            </button>
+          </div>
+
+          <!-- Delete Run Modal Backdrop -->
+          <div
+            data-modal-target="backdrop"
+            data-modal-id="deleteRunModal"
+            data-action="click->modal#backdropClose"
+            class="modal-backdrop opacity-0 pointer-events-none"
+          ></div>
+
+          <!-- Delete Run Modal -->
+          <div
+            id="deleteRunModal"
+            role="dialog"
+            tabindex="-1"
+            class="modal opacity-0 pointer-events-none"
+          >
+            <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+              <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Run?</h2>
+              <p class="text-soft text-sm">Are you sure? This cannot be undone.</p>
+            </div>
+            
+            <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+              <button data-action="click->modal#close" data-modal-id="deleteRunModal" type="button" class="btn btn-white mt-2 sm:mt-0">Cancel</button>
+              <%= button_to 'Delete run',
+                            @run,
+                            method: :delete,
+                            data: { turbo: false },
+                            class: 'btn btn-destructive w-full whitespace-nowrap'
+              %>
+            </div>
+
+            <button data-action="click->modal#close" type="button" data-modal-id="deleteRunModal" class="absolute right-4 top-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+              <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+              <span class="sr-only">Close</span>
+            </button>
+          </div>
         </div>
       <% end %>
     </div>
