--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -252,8 +252,7 @@
     data-modal-target="backdrop"
     data-modal-id="signOutModal"
     data-action="click->modal#backdropClose"
-    class="modal-backdrop opacity-0 pointer-events-none"
-  ></div>
+    class="modal-backdrop opacity-0 pointer-events-none"></div>
 
   <!-- Sign Out Modal -->
   <div
@@ -272,7 +271,7 @@
       <%= button_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: 'btn btn-destructive w-full whitespace-nowrap' %>
     </div>
 
-    <button data-action="click->modal#close" type="button" data-modal-id="signOutModal" class="absolute right-4 top-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+    <button data-action="click->modal#close" type="button" data-modal-id="signOutModal" class="absolute right-0 top-0 p-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
       <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
       <span class="sr-only">Close</span>
     </button>
@@ -283,8 +282,7 @@
     data-modal-target="backdrop"
     data-modal-id="deleteAccountModal"
     data-action="click->modal#backdropClose"
-    class="modal-backdrop opacity-0 pointer-events-none"
-  ></div>
+    class="modal-backdrop opacity-0 pointer-events-none"></div>
 
   <!-- Delete Account Modal -->
   <div
@@ -308,7 +306,7 @@
       %>
     </div>
 
-    <button data-action="click->modal#close" type="button" data-modal-id="deleteAccountModal" class="absolute right-4 top-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+    <button data-action="click->modal#close" type="button" data-modal-id="deleteAccountModal" class="absolute right-0 top-0 p-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
       <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
       <span class="sr-only">Close</span>
     </button>
