--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -34,8 +34,7 @@
     data-modal-target="backdrop"
     data-modal-id="deleteTeamModal"
     data-action="click->modal#backdropClose"
-    class="modal-backdrop opacity-0 pointer-events-none"
-  ></div>
+    class="modal-backdrop opacity-0 pointer-events-none"></div>
 
   <!-- Delete Team Modal -->
   <div
@@ -59,7 +58,7 @@
       %>
     </div>
 
-    <button data-action="click->modal#close" type="button" data-modal-id="deleteTeamModal" class="absolute right-4 top-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+    <button data-action="click->modal#close" type="button" data-modal-id="deleteTeamModal" class="absolute right-0 top-0 p-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
       <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
       <span class="sr-only">Close</span>
     </button>
