fix: add missing 'modal' target attributes

--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -41,6 +41,7 @@
     id="deleteTeamModal"
     role="dialog"
     tabindex="-1"
+    data-modal-target="modal"
     class="modal opacity-0 pointer-events-none"
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
