--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -259,6 +259,7 @@
     id="signOutModal"
     role="dialog"
     tabindex="-1"
+    data-modal-target="modal"
     class="modal opacity-0 pointer-events-none"
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
@@ -289,6 +290,7 @@
     id="deleteAccountModal"
     role="dialog"
     tabindex="-1"
+    data-modal-target="modal"
     class="modal opacity-0 pointer-events-none"
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
