--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -46,6 +46,7 @@
             id="deleteRunModal"
             role="dialog"
             tabindex="-1"
+            data-modal-target="modal"
             class="modal opacity-0 pointer-events-none"
           >
             <div class="flex flex-col space-y-1.5 text-center sm:text-left">
